<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">cris</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="move_forward">Move Forward</string>
    <string name="move_backward">Move Backward</string>
    <string name="turn_left">Turn Left</string>
    <string name="turn_right">Turn Right</string>
    <string name="stop">Stop</string>

</resources>
