<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/move_forward_btn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/move_forward" />

    <Button
        android:id="@+id/stop_btn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/move_backward_btn"
        android:layout_centerHorizontal="true"
        android:text="@string/stop" />

    <Button
        android:id="@+id/turn_right_btn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/turn_left_btn"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/stop_btn"
        android:text="@string/turn_right" />

    <Button
        android:id="@+id/turn_left_btn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/move_forward_btn"
        android:layout_marginRight="14dp"
        android:layout_toLeftOf="@+id/stop_btn"
        android:text="@string/turn_left" />

    <Button
        android:id="@+id/move_backward_btn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/move_forward_btn"
        android:layout_below="@+id/turn_right_btn"
        android:text="@string/move_backward" />

    <Button
        android:id="@+id/test1_btn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/move_backward_btn"
        android:layout_marginTop="29dp"
        android:layout_toLeftOf="@+id/move_backward_btn"
        android:text="test#1" />

    <Button
        android:id="@+id/test3_btn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/test2_btn"
        android:layout_alignBottom="@+id/test2_btn"
        android:layout_toRightOf="@+id/move_forward_btn"
        android:text="test#3" />

    <Button
        android:id="@+id/test2_btn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/test1_btn"
        android:layout_alignBottom="@+id/test1_btn"
        android:layout_centerHorizontal="true"
        android:text="test#2" />

</RelativeLayout>